<resources>
    <string name="app_name">Super Duper App</string>
    <string name="HintUsuario">Usuario</string>
    <string name="HintSenha">Senha</string>
    <string name="ButtonLogin">Login</string>
    <string name="HintButtonLogin">LOGIN</string>
    <string name="buttonRegister">REGISTER</string>
    <string name="accessLogo">Logo</string>
    <string name="registerTitle">REGISTER</string>
    <string name="registerUser">User</string>
    <string name="registerButton">REGISTER</string>
    <string name="registerPassword">Password</string>
    <string name="usuarios">USUARIOS</string>
    <string name="produtos">PRODUTOS</string>
    <string name="relatorio">RELATORIO</string>
    <string name="venda">VENDA</string>
    <string name="menu">MENU</string>
</resources>
