<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.Register">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
    android:background="@color/darkGreen"
        android:text="@string/registerTitle"
        android:textColor="@color/green"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editRegisterUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="197dp"
        android:ems="10"
        android:hint="@string/registerUser"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editRegisterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="267dp"
        android:ems="10"
        android:hint="@string/registerPassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        tools:targetApi="o" />

    <Button
        android:id="@+id/buttonFinishRegister"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="155dp"
        android:background="@drawable/button_fallout"
        android:text="@string/registerButton"
        android:textColor="#00FF27" />

</RelativeLayout>